Fixes screen height issue on landing page. Updates dark mode compatibiltiy to login and signup components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,5 @@ body {
 
 } */
 main {
-  flex-grow: 1
+  height: 100vh;
 }
